[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://LabFloor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Imports/Laboratory.tres" type="TileSet" id=3]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Bat.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/ThirdLevel.gd" type="Script" id=6]
[ext_resource path="res://Objects/Skeleton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/Ghost.tscn" type="PackedScene" id=9]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[node name="ThirdLevel" type="Node2D"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -159.0
margin_top = -102.0
margin_right = 711.0
margin_bottom = 405.0
color = Color( 0, 0, 0, 1 )

[node name="LabFloor" parent="." instance=ExtResource( 2 )]

[node name="Door" parent="." instance=ExtResource( 1 )]
position = Vector2( 432, -23 )

[node name="YSort" type="YSort" parent="."]

[node name="TileMap" type="TileMap" parent="YSort"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 512
collision_mask = 3
format = 1
tile_data = PoolIntArray( -65516, 2, 0, -65514, 2, 0, 0, 14, 0, 1, 14, 0, 2, 14, 0, 3, 14, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 14, 0, 11, 14, 0, 12, 14, 0, 13, 14, 0, 14, 14, 0, 15, 14, 0, 16, 23, 0, 17, 16, 0, 18, 16, 0, 19, 16, 0, 24, 14, 0, 25, 16, 0, 28, 16, 0, 29, 14, 0, 65536, 14, 0, 65537, 9, 0, 65538, 18, 0, 65539, 66, 0, 65540, 68, 0, 65541, 68, 0, 65542, 68, 0, 65547, 66, 0, 65548, 68, 0, 65549, 68, 0, 65550, 68, 0, 65560, 14, 0, 65565, 14, 0, 131072, 14, 0, 131096, 14, 0, 131101, 14, 0, 196608, 14, 0, 196632, 14, 0, 196637, 14, 0, 262144, 14, 0, 262168, 14, 0, 262173, 14, 0, 327680, 14, 0, 327704, 14, 0, 327709, 14, 0, 393216, 14, 0, 393221, 14, 0, 393222, 14, 0, 393223, 14, 0, 393224, 14, 0, 393225, 14, 0, 393226, 14, 0, 393227, 14, 0, 393228, 14, 0, 393229, 14, 0, 393230, 14, 0, 393231, 14, 0, 393232, 14, 0, 393233, 14, 0, 393234, 14, 0, 393235, 14, 0, 393236, 14, 0, 393237, 14, 0, 393238, 14, 0, 393239, 14, 0, 393240, 14, 0, 393245, 14, 0, 458752, 14, 0, 458765, 67, 0, 458767, 14, 0, 458768, 69, 0, 458769, 69, 0, 458781, 14, 0, 524288, 14, 0, 524303, 14, 0, 524317, 14, 0, 589824, 14, 0, 589825, 9, 0, 589838, 84, 0, 589839, 14, 0, 589853, 14, 0, 655360, 14, 0, 655375, 14, 0, 655388, 84, 0, 655389, 14, 0, 720896, 14, 0, 720910, 84, 0, 720911, 14, 0, 720925, 14, 0, 786432, 14, 0, 786440, 23, 0, 786447, 14, 0, 786452, 14, 0, 786453, 14, 0, 786454, 14, 0, 786455, 14, 0, 786456, 14, 0, 786457, 14, 0, 786458, 14, 0, 786459, 14, 0, 786460, 14, 0, 786461, 14, 0, 851968, 14, 0, 851976, 14, 0, 851983, 14, 0, 851988, 76, 0, 851995, 76, 0, 851997, 14, 0, 917504, 14, 0, 917512, 14, 0, 917519, 14, 0, 917525, 88, 0, 917533, 14, 0, 983040, 14, 0, 983048, 14, 0, 983069, 14, 0, 1048576, 14, 0, 1048577, 7, 0, 1048580, 8, 0, 1048582, 8, 0, 1048584, 14, 0, 1048604, 74, 0, 1048605, 14, 0, 1114112, 14, 0, 1114120, 14, 0, 1114141, 14, 0, 1179648, 14, 0, 1179649, 14, 0, 1179650, 14, 0, 1179651, 14, 0, 1179652, 14, 0, 1179653, 14, 0, 1179654, 14, 0, 1179655, 14, 0, 1179656, 14, 0, 1179657, 68, 0, 1179668, 77, 0, 1179674, 83, 0, 1179675, 71, 0, 1179677, 14, 0, 1245195, 66, 0 )

[node name="StartingPoint" type="Position2D" parent="YSort"]
position = Vector2( 324, 59 )

[node name="Player" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 322, 60 )

[node name="AnimationTree" parent="YSort/Player" index="4"]
parameters/playback = SubResource( 1 )
parameters/Dash/blend_position = Vector2( 0, 0 )

[node name="Bat2" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 284, 282 )

[node name="Skeleton" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 62, 71 )

[node name="Ghost" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 183, 170 )

[node name="Ghost2" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 422, 153 )

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="Restart" type="Button" parent="HUD"]
margin_left = 406.0
margin_top = 39.0
margin_right = 463.0
margin_bottom = 63.0
text = "Restart"

[connection signal="changeScene" from="Door" to="." method="_on_Door_changeScene"]
[connection signal="pressed" from="HUD/Restart" to="." method="_on_Restart_pressed"]

[editable path="YSort/Player"]
[editable path="YSort/Player/HitBoxPivot/SwordHitBox"]
[editable path="YSort/Player/HurtBox"]
[editable path="HUD"]
